jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      name: http-port
      targetPort: 8080
    - protocol: TCP
      port: 50000
      name: jnlp-port
      targetPort: 50000
  type: NodePort
